<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin">

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_toEndOf="@+id/avatar"
        android:layout_toRightOf="@+id/avatar"
        android:fontFamily="casual"
        android:paddingBottom="2dip"
        android:textAlignment="viewStart"
        android:textColor="@android:color/black"
        android:hint="Somebody"
        android:textSize="17sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@android:color/transparent"
        android:paddingBottom="2dip"
        android:paddingTop="6dip"
        android:visibility="visible"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/follow_button"
        style="@android:style/Widget.Button"
        android:layout_width="80dp"
        android:layout_height="35dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@+id/unfollow_button"
        android:onClick="changePage"
        android:text="follow"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="12sp"
        android:textStyle="italic" />

    <Button
        android:id="@+id/unfollow_button"
        style="@android:style/Widget.Button"
        android:layout_width="80dp"
        android:layout_height="35dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/follow_button"
        android:text="unfollow"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="12sp"
        android:textStyle="italic" />

</RelativeLayout>