<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="Login" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/profile"
            android:title="Profile" />
        <item
            android:id="@+id/nav_follow"
            android:icon="@drawable/follow"
            android:title="Followers" />
        <item
            android:id="@+id/nav_following"
            android:icon="@drawable/following"
            android:title="Following" />
        <item
            android:id="@+id/nav_public_repos"
            android:icon="@drawable/about"
            android:title="Public Repositories" />

        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/notif"
            android:title="Notifications" />



    </group>

    <item android:title="Visiualization">
        <menu>
            <item
                android:id="@+id/nav_comments"
                android:icon="@drawable/ic_menu_share"
                android:title="Most Pull request" />
            <item
                android:id="@+id/nav_contributes"
                android:icon="@drawable/ic_menu_send"
                android:title="Commits of The Month " />
        </menu>
    </item>

</menu>
